# transparency_index

./: .gitignore  README.md  _brand.yml  _quarto.yml  custom.css  index.qmd  pyproject.toml
.github/workflows/: deploy.yml
bib/: bluesky.bib  discord.bib  kwai.bib  meta.bib  reddit.bib  references_global.bib  tiktok.bib  whatsapp.bib  x.bib
chapters/: about.qmd  appendix.qmd  bibliography.md  executive-summary.qmd  foreword.qmd  information-integrity.qmd  introduction.qmd  methodology.qmd  recommendations.qmd  regulation.qmd  results.qmd
chapters/appendices/: bluesky.qmd  discord.qmd  facebook.qmd  instagram.qmd  kwai.qmd  linkedin.qmd  pinterest.qmd  reddit.qmd  snapchat.qmd  telegram.qmd  threads.qmd  tiktok.qmd  whatsapp.qmd  x.qmd  youtube.qmd
data/: questions_ads_2025.yml  questions_ugc_2025.yml
data/global/bluesky/: ads.yml  ugc.yml
data/global/discord/: ads.yml  ugc.yml
data/global/facebook/: ugc.yml
data/global/instagram/: ugc.yml
data/global/kwai/: ads.yml  (+1 more)
notebooks/ads/: br_google_ads.ipynb  br_linkedin_ads.ipynb  br_meta_ads.ipynb  eu_google_ads.ipynb  eu_linkedin_ads.ipynb  eu_meta_ads.ipynb  eu_uk_tiktok_ads.ipynb  uk_meta_ads.ipynb
notebooks/ugc/: eu_tiktok.ipynb  global_bluesky.ipynb  global_bluesky_oc_19.py  global_reddit.ipynb  global_reddit_oc_19.py  global_telegram.ipynb  global_telegram_oc_19.py  global_twitter.ipynb  global_twitter_oc_19.py  global_youtube.ipynb  global_youtube_oc.19.py  uk_tiktok.ipynb
utils/: __init__.py  loader.py  platform_summary.py  quarto_helpers.py  responses_aggregator.py  scoring.py  summary_table.py
(+48 files in other folders)
