[project]
name = "quarto-param"
version = "0.1.0"
description = "Quarto-based social media evaluation system"
authors = [
    {name = "belisards", email = "adrianobf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "openpyxl>=3.1.5",
    "markdown>=3.4.0",
]
